--- a/V2/JournalV2.tex
+++ b/V2/JournalV2.tex
@@ -703,7 +703,7 @@ The original Klein-Rogers-Kundur model in \cite{KundurTwoArea} was modified for 
 
 \subsection{Two-Area Model Preparation - FACTS Device}
 
-The second application in Figure \ref{NetworkOutline} is to use the WAPOD output as a modulating input to an SVC's excitation system. The two-area model was prepared for simulation in the same way as in the previous case except that a PSS was included at all four machines. The SVC model implemented was an average-value model (Figure \ref{SVC_Model}), identical to that used in \cite{PhasorPODImplement}. The SVC was connected at the mid-point of the two area network (Bus 8 in Figure \ref{NetworkOutline}). As shown by Chow \& Larsen in \cite{sVARdamp}, this is the point where voltage swings will be the greatest and also where the SVC can be most effective at damping power swings. The SVC receives a target voltage reference Vref (From where?) and manipulates active power to drive the voltage at the point of connection towards this value. The output of the POD controller is added to this reference signal to provide damping action. For comparison, two parallel and identical implementations of the Phasor-POD algorithm were used, one simulated in SIMULINK and the other implemented on the cRIO. Either could be switched in at a given time. (!Include a results comparison as a graph somewhere!) It is important to note here that when the hardware-POD was switched in, the PSS's at each of the four machines were disconnected, leaving the SVC as the sole control and damping device in the network. The ability of the SVC to keep the network stable and also to restore it to stability was verified with off-line simulations using the Phasor-POD implemented in \textsc{Simulink}. In addition, the performance of the PSS's were not modified as the Phasor-POD algorithm would not be running in parallel with them.
+The second application in Figure \ref{NetworkOutline} is to use the WAPOD output as a modulating input to an SVC's excitation system. The two-area model was prepared for simulation in the same way as in the previous case except that a PSS was included at all four machines. The SVC model implemented was an average-value model (Figure \ref{SVC_Model}), identical to that used in \cite{PhasorPODImplement}. The SVC was connected at the mid-point of the two area network (Bus 8 in Figure \ref{NetworkOutline}). As shown by Chow \& Larsen in \cite{sVARdamp}, this is the point where voltage swings will be the greatest and also where the SVC can be most effective at damping power swings. The SVC receives a target voltage reference Vref (From where?) and manipulates active power to drive the voltage at the point of connection towards this value. The output of the POD controller is added to this reference signal to provide damping action. For comparison, two parallel and identical implementations of the Phasor-POD algorithm were used, one simulated in SIMULINK and the other implemented on the cRIO. Either could be switched in at a given time. (!Include a results comparison as a graph somewhere!) It is important to note here that when the hardware-POD was switched in, the PSS's at each of the four machines were disconnected, leaving the SVC as the sole control and damping device in the network. The ability of the SVC to keep the network stable and also to restore it to stability was verified with off-line simulations using the Phasor-POD implemented in \textsc{Simulink}. In addition, the performance of the PSS's were not modified as the Phasor-POD algorithm would not be running in parallel with them. (Reviewer  suggestion: Maybe add a mode to the network which the PSS cannot damp and then have the WAPOD damp this mode)
 
 \begin{figure}[!th]
 \centering
@@ -713,13 +713,13 @@ The second application in Figure \ref{NetworkOutline} is to use the WAPOD output
 \end{figure}
 \vspace{-0.7em}
 \subsection{Real-Time Simulation}
-The modified network in each case was grouped into sub-systems and prepared for simulation using RT-LAB \cite{eMEGASIM}. The simulation time step chosen was 50$\mu$s. The outputs and inputs of the real-time simulator were updated every 50$\mu$s. Current and voltage measurements were taken from the points marked in Figure \ref{NetworkOutline} and were extracted from the analogue outputs of the real-time simulator. The damping signal \emph{dVpod} in Figure~\ref{NetworkOutline} was generated at two points; one in the real-time simulation itself using a \textsc{Simulink} implementation of the Phasor POD algorithm and one externally on the cRIO. Both signals were generated simultaneously and either one could be switched in for use in the simulation.
+The modified network in each case was grouped into sub-systems and prepared for simulation using RT-LAB \cite{eMEGASIM}. The simulation time step chosen was 50$\mu$s, meaning that outputs and inputs of the real-time simulator were updated every 50$\mu$s. Current and voltage measurements were taken from the points marked in Figure \ref{NetworkOutline} and were extracted from the analogue outputs of the real-time simulator. The damping signal \emph{dVpod} in Figure~\ref{NetworkOutline} was generated at two points; one in the real-time simulation itself using a \textsc{Simulink} implementation of the Phasor POD algorithm and one externally on the cRIO. Both signals were generated simultaneously and either one could be switched in for use in the simulation.
 
 \section{Testing \& Results}\label{Results}
-The POD algorithm implemented in \textsc{Simulink} uses the locally available active power measurements as input. In the case of the Generator PSS, this is the active power measured at the terminals of the generator. In the case of the SVC, the active power flow at the mid-point of the interconnecting line (also the point of connection of the SVC) is used as an input. The WAPOD hardware prototype was able to use the same signal as an input in each case but can also exploit other data contained in the synchrophasor data stream. Testing the operation of the hardware prototype involved using the HIL setup outlined in Figure~\ref{Hardware_Outline} and verifying whether steady state stability could be maintained in the simulated two-area network. Once this was demonstrated, the inter-area mode was excited by perturbing the voltage reference $V_{ref}$ of Machine M1. The oscillations caused by this disturbance would then be damped out by the PSS in tandem with the Phasor POD algorithm. Testing was carried out in several phases, one with the \textsc{Simulink} POD connected and the other with the cRIO-based WAPOD connected to the real-time simulation. In the latter case, three different damping inputs were tested: active power, positive sequence current magnitude and the voltage angle difference between buses 5 and 11 in Figure \ref{NetworkOutline}.
-\vspace{-0.7em}
+The POD algorithm implemented in \textsc{Simulink} uses the locally available active power measurements as input. In the case of the Generator PSS, this is the active power measured at the terminals of the generator. In the case of the SVC, the active power flow at the mid-point of the interconnecting line (also the point of connection of the SVC) is used as an input. The WAPOD hardware prototype can use the same signal as an input in each case above but can also exploit other data contained in the synchrophasor data stream. Testing the operation of the hardware prototype involved using the HIL setup outlined in Figure~\ref{Hardware_Outline} and verifying whether steady state stability could be maintained in the simulated two-area network. Once this was demonstrated, the inter-area mode was excited by perturbing the voltage reference $V_{ref}$ of Machine M1. Testing was carried out in several phases, one with the \textsc{Simulink} POD connected and the other with the cRIO-based WAPOD connected to the real-time simulation. In the latter case, three different damping inputs were tested: active power, positive sequence current magnitude and the voltage angle difference between buses 5 and 11 in Figure \ref{NetworkOutline}.
+%\vspace{-0.7em}
 \subsection{SVC Excitation Supplementary Input}
-Figure \ref{SVC_Plots} illustrates the response of the hardware controller to a small disturbance at machine M1. This disturbance is a 5\% change for 200 ms. in the reference voltage of the AVR. This is sufficient to excite the inter-area mode. The best damping performance is achieved using voltage angle difference as a damping input to the Phasor-POD algorithm. This supports the theoretical results predicted by Chompoobutrgool and Vanfretti in \cite{Yuwa}. Response parameters such as settling times and overshoot were calculated based on the response in Figure \ref{SVC_Plots} and are presented in Table \ref{SVCResponseTable}. The response of the simulated POD (in \textsc{Simulink}) was used as a baseline to calculate the overshoot. The settling time is calculated as the time required for the response of the controller (in volts) to be constrained to +/- 1V.
+Figure \ref{SVC_Plots} illustrates the response of the hardware controller to a perturbation of the voltage reference at machine M1. This disturbance is a 5\% change for 200 ms. in the reference voltage of the AVR. This is sufficient to excite the inter-area mode. The best damping performance is achieved using voltage angle difference as a damping input to the Phasor-POD algorithm. This supports the theoretical results predicted by Chompoobutrgool and Vanfretti in \cite{Yuwa}. Response parameters such as settling times and overshoot were calculated based on the response in Figure \ref{SVC_Plots} and are presented in Table \ref{SVCResponseTable}. The response of the simulated POD (in \textsc{Simulink}) was used as a baseline to calculate the overshoot. The settling time is calculated as the time required for the response of the controller (in volts) to be constrained to +/- 1V.
 %A frequency analysis of each of these responses shows that the dominant mode in each response is the 0.64Hz inter-area mode.\\
 \begin{table}[!ht]
 \caption{Response Parameters : SVC Excitation Supplementary Input}\label{SVCResponseTable}
@@ -741,7 +741,7 @@ Figure \ref{SVC_Plots} illustrates the response of the hardware controller to a 
 \begin{figure}[!th]
 \centering
 \includegraphics[width=3in]{SVC_ResponseComparison_Labelled_NoVMag.png}
-\caption{Controller Response Comparison : Supplementary SVC Excitation Input}
+\caption{Controller Response Comparison : Supplementary SVC Excitation Input. This needs to clarify which are hardware signals}
 \label{SVC_Plots}
 \end{figure}
 
@@ -797,9 +797,11 @@ As in the previous case, response parameters such as settling times and overshoo
 
 \section{Challenges}\label{Challenges}
 
+Described below are some of the major challenges overcome during the implementation and testing of this prototype. Not all of these issues may be relevant to a practical controller used in an actual power system however, all are included so that future implementations of this type can be designed to account for these issues.
+
 \subsection{Time Delays}
 
-The Phasor POD algorithm implemented in \textsc{Simulink} has close to zero time delay between the power system changing and the controller responding. The same algorithm, when run on the cRIO, receives data with a stochastic delay. It is evident from Figure~\ref{Hardware_Outline} that several sources of stochastic time delay exist. Sections such as the analogue amplifiers, the FPGA (50$\mu$s) and the real-time section of the cRIO all represent fixed, non-zero time delays. Elements such as the D/A and A/D conversion in the real-time simulator also add a deterministic time delay. However, elements in the data path such as TCP/IP network communication and the PC used to extract raw measurement data from the PDC synchrophasor stream all represent variable delays. The total delay allows for a network disturbance to grow slightly before the cRIO starts responding. It also has the effect of changing the phase compensation required in the Phasor-POD algorithm. Observe that the phase compensation needed can be changed from the remote interface, depending on the measured delay. The experimentally measured end-to-end delay over the complete data path in Figure \ref{Hardware_Outline} averaged 283.1 ms. This was calculated by logging data in the real-time simulator and measuring the delay between the power system response and the controller response. Data for this is presented in Table \ref{DelayData}. Presently, the phase compensation required is determined iteratively however, this can be automated using time-stamped data together with an adaptive controller.
+The Phasor POD algorithm implemented in \textsc{Simulink} has close to zero time delay between power system changes and the controller response. The same algorithm, when run on the cRIO, receives data with a stochastic delay. It is evident from Figure~\ref{Hardware_Outline} that several sources of stochastic time delay exist. Sections of the test setup such as the analogue amplifiers, the FPGA (50$\mu$s) and the real-time section of the cRIO all represent fixed, non-zero time delays. Elements such as the D/A and A/D conversion in the real-time simulator also add a deterministic time delay. However, elements in the data path such as TCP/IP network communication and the PC used to extract raw measurement data from the PDC synchrophasor stream all represent variable delays. The total delay allows for a network disturbance to grow slightly before the cRIO starts responding. It also has the effect of changing the phase compensation required in the Phasor-POD algorithm. The phase compensation needed can be changed from the remote interface, depending on the measured delay. The experimentally measured end-to-end delay over the complete data path in Figure \ref{Hardware_Outline} averaged 283.1 ms. This was calculated by logging data in the real-time simulator and measuring the delay between the power system response and the controller response. Data for this is presented in Table \ref{DelayData}. Presently, the phase compensation required is determined iteratively however, this can be automated using time-stamped data together with an adaptive controller.
 
 \begin{table}[h]
 \caption{Signal Propagation Delay Calculation}\label{DelayData}
@@ -822,12 +824,12 @@ The Phasor POD algorithm implemented in \textsc{Simulink} has close to zero time
 %In a direct comparison between the simulated Phasor-POD and one running on the cRIO, the time delay will be 
 
 \subsection{Analogue Limits and Noise}
-The original POD algorithm~\cite{PhasorPOD} was developed and simulated in an ideal, noise-free environment with zero delay. More importantly, no limits are imposed on the magnitude of either the controller's inputs or outputs in a simulation. In contrast, a hardware-based implementation using analogue signals is constrained by the analogue signal limits (see Figure \ref{ScalingProblem}). Consider the analogue outputs of OPAL-RT's eMEGASIM simulator which are rated for $\pm16V$ or $\pm10mA$  \cite{eMEGASIM}.
+The original POD algorithm~\cite{PhasorPOD} was developed and simulated in an ideal, noise-free environment with zero delay. More importantly, no limits are imposed on the magnitude of either the controller's inputs or outputs in a simulation. In contrast, a hardware-based implementation using analogue signals is constrained by the analogue signal limits (see Figure \ref{ScalingProblem}). Consider the analogue outputs of OPAL-RT's eMEGASIM simulator which are rated at $\pm16V$ or $\pm10mA$  \cite{eMEGASIM}.
 %\begin{itemize}
 %\item \textbf{Analogue Outputs} : Number: 32 (+/-16V and +/-10mA)
 %\item \textbf{Analogue Inputs} : Number: 128 (+/-100V and +/-10mA)
 %\end{itemize}
-These are low level outputs and can be directly connected to the low-voltage level PMU inputs. However, the standard input modules of typical PMU's are rated for 0-300V and a 0-16V analogue signal will not use a significant portion of this range. Additionally, a signal of such a small magnitude will be contaminated by noise and will consequently have a poor Signal to Noise ratio. A similar argument can be made for the current outputs. The solution involved amplifying the analogue signals from the real-time simulator to levels that used more of the dynamic change of the PMU input modules. This simultaneously improves both accuracy and the signal-to-noise ratio.
+These are low level outputs and may be directly connected to the PMU inputs. However, the standard input modules of typical PMU's are rated for 0-300V and a 0-16V analogue signal will not use a significant portion of this range. Additionally, a signal of such a small magnitude will be contaminated by noise and will consequently have a poor Signal to Noise ratio. A similar argument can be made for the current outputs. The solution involved amplifying the analogue signals from the real-time simulator to levels that used more of the dynamic change of the PMU input modules. This simultaneously improves both accuracy and the signal-to-noise ratio. This is not expected to be a problem with a setup using current and voltage transformer inputs of a suitable range.
 
 \begin{figure}[!th]
 \centering
@@ -840,7 +842,7 @@ These are low level outputs and can be directly connected to the low-voltage lev
 The output of the simulated POD can vary over several orders of magnitude, ranging from $10^{5}$ at times of peak damping to as small as $10^{-3}$ once the oscillation magnitude  becomes small. It is difficult to accurately recreate analogue signals with such vast dynamic ranges. The voltage output module used here had a 24-bit resolution and was limited to $\pm 10V$ in magnitude. Any values generated by the POD algorithm that were greater in magnitude that 10V would cause output saturation. All these issues meant that signal magnitudes had to be amplified in certain cases to use the full measurement ranges or had to be limited in other cases, so as to capture variations without saturation.
 
 \subsection{Loop Rates and FPGA Resources}\label{looprate}
-The most significant challenge in the real-time implementation of the Phasor-POD algorithm was the fact that different sections of the hardware control loop run at different loop rates or step sizes (see Figure \ref{RTArchitecture}). Added to this was the fact that the real-time simulator generated data every 50 $\mu$s (and thus expected data from the HIL set-up at the same rate) while the rest of the HIL set-up did not support such a high data rate. The PMUs used supported a maximum reporting rate of 50 samples/second. Table~\ref{ex:LoopRates} lists the different components of the HIL set-up together with their respective loop rates.
+The most significant challenge in the real-time implementation of the Phasor-POD algorithm was the fact that different sections of the hardware control loop run asynchronously and at different loop rates or step sizes (see Figure \ref{RTArchitecture}). Added to this was the fact that the real-time simulator generated data every 50 $\mu$s (and thus expected data from the HIL set-up at the same rate) while the rest of the HIL set-up did not support such a high data rate. The PMUs used supported a maximum reporting rate of 50 samples/second. Table~\ref{ex:LoopRates} lists the different components of the HIL set-up together with their respective loop rates.
 \begin{table}[!ht]
 \caption{Comparison of Loop Rates of Different Components}\label{ex:LoopRates}
 \begin{center}
@@ -857,7 +859,7 @@ The most significant challenge in the real-time implementation of the Phasor-POD
 \end{center}
 \end{table} 
 
-50 $\mu$s. was chosen for the FPGA loop rate in order to match the loop rate of the real-time simulator. This was to ensure that data was always available at the analogue input of the simulator and no erroneous data points were read. The 50 $\mu$s. loop rate of the FPGA meant that new data was expected every 50 $\mu$s., corresponding to a 20000 samples per second PMU sampling rate. The fastest execution speed of the real-time section of the cRIO was 1ms, significantly slower than the FPGA\rq{s} speed. New synchrophasor data was available from the PMUs only every 20 ms. One solution to this problem was to up-sample the synchrophasor data, interpolate between consecutive data points and then stream this data to the Phasor-POD algorithm on the FPGA. The major problem with this method was that the up-sampling process on the RT controller is computationally intensive and would not run at the required 20 ms. loop rate. An alternative solution was a sample and hold algorithm implemented on the FPGA. As data was extracted every 20 ms., the RT controller would receive this data and send it to the FPGA. This value would then be held constant till the next data point arrived. This was implemented and found to work satisfactorily. %The difference between the Phasor-POD algorithm running the \textsc{Simulink} simulation and that on the cRIO was the data rates of their respective input data. The simulated POD received new data every 50 $\mu$s. while the cRIO-based POD received data every 20 ms.
+50 $\mu$s. was chosen for the FPGA loop rate in order to match the loop rate of the real-time simulator. This was to ensure that data was always available at the analogue input of the simulator and no erroneous data points were read. The 50 $\mu$s. loop rate of the FPGA meant that new data was expected every 50 $\mu$s., corresponding to a 20000 samples per second PMU sampling rate. The fastest execution speed of the real-time section of the cRIO was 1ms, significantly slower than the FPGA\rq{s} speed. New synchrophasor data was available from the PMUs only every 20 ms. One solution to this problem was to up-sample the synchrophasor data, interpolate between consecutive data points and then stream this data to the Phasor-POD algorithm on the FPGA. The major problem with this method was that the up-sampling process on the RT controller is computationally intensive and would not run at the required 20 ms. loop rate. An alternative solution was a sample and hold algorithm implemented on the FPGA. As data was extracted every 20 ms., the RT controller would receive this data and send it to the FPGA. This value would then be held constant till the next data point arrived. This was implemented and found to work satisfactorily. (Can this be a problem with a practical implementation of such a controller? How?) %The difference between the Phasor-POD algorithm running the \textsc{Simulink} simulation and that on the cRIO was the data rates of their respective input data. The simulated POD received new data every 50 $\mu$s. while the cRIO-based POD received data every 20 ms.
 
 \subsection{FPGA Numeric Data Formats and Accuracy}
 
@@ -872,7 +874,7 @@ Due to the FPGA design, not all these calculations can be performed in the same 
 %----------------------------------------------------------------------------------------------------------------------------------------------
 \section{Further Work}\label{Future}
 
-The WAPOD prototype as developed in this work together with the experimental tests give strong evidence of the possibilities and benefits of using wide area synchrophasor data for damping control, as theorised in \cite{Yuwa}. The prototype here is, however, dependent on manual input for signal selection and algorithm parameter values. These two processes can be automated by having the WAPOD itself monitor the various input signals and intelligently select the one having the highest observability of a particular mode \cite{Yuwa}. The algorithm parameters, including the required phase compensation due to a stochastically varying delay, can also be determined adaptively on the WAPOD itself. On the same lines, this can further be extended to include selection among several measurement locations on the network. The fact that a stochastic time delay is introduced by unwrapping the synchrophasor data stream on a desktop computer can be addressed by performing this function on the WAPOD controller (here, the cRIO) itself thus making the whole control loop more deterministic. The HIL system at present includes several sources of stochastic delay besides the delay caused by TCP communication. The HIL set-up can also be expanded to use actual generator excitation control hardware such as ABB's ECS system.
+The WAPOD prototype as developed in this work together with the experimental tests provide strong evidence of the possibilities and benefits of using wide area synchrophasor data for damping control, as theorised in \cite{Yuwa}. The prototype here is, however, dependent on manual input for signal selection and algorithm parameter values. These two processes can be automated by having the WAPOD itself monitor the various input signals and intelligently select the one having the highest observability of a particular mode \cite{Yuwa}. The algorithm parameters, including the required phase compensation due to a stochastically varying delay, can also be determined adaptively on the WAPOD itself. On the same lines, this can further be extended to include selection among several measurement locations on the network. The fact that a stochastic time delay is introduced by unwrapping the synchrophasor data stream on a desktop computer can be addressed by performing this function on the WAPOD controller (here, the cRIO) itself thus making the whole control loop more deterministic. The HIL system at present includes several sources of stochastic delay besides the delay caused by TCP communication. The HIL set-up can also be expanded to use actual generator excitation control hardware such as ABB's ECS system.
 
 \section{Conclusion}\label{Conclusion}
 This work has provided experimental proof of the feasibility and benefits of using wide-area power system measurements as an input to an oscillation damping controller. The generic nature of the developed controller was demonstrated by using an identical implementation with mere changes in parameters to suit the controlled device's input requirements and capabilities. The hardware prototype developed on the NI cRIO was tested in a real-time HIL setup and was demonstrated to work satisfactorily. The performance of the WAPOD can be improved by exploiting the full range of data available in a synchrophasor data stream. The flexibility of synchrophasor data was demonstrated and the wide range of inputs possible from this were also tested. The results from this work serve as experimental proof-of-concept to the theory presented in \cite{Yuwa} and pave the way for the development of other PMU-based real-time control systems.
@@ -1026,26 +1028,38 @@ The full listing of the SmarTS Lab, the simulator's capabilities and its interfa
 % (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
 
+\bibitem{KundurTwoArea} 
+M.~Klein, J. G.~Rogers and P.~Kundur \emph{A fundamental study of inter-area oscillations in Power Systems} IEEE Trans, PWRS, no. 6, pp. 914-921, 1991. 
+
+\bibitem{WAPODNorway} Uhlen, K. and Vanfretti, L. and De Oliveira, M. M. and Leirbukt, AB. and Aarstrand, V. H. and Gjerde, J. O. \emph{Wide-Area Power Oscillation Damper implementation and testing in the Norwegian transmission network} in Power and Energy Society General Meeting, 2012 IEEE pp. 1-7
+
+\bibitem{localREMcomparison}  M. E.~Aboul-Ela, A. A.~Sallam, J. D.~McCalley and A. A.~Fouad, \emph{Damping Controller Design for Power System Oscillations Using Global Signals}, IEEE trans. on Power Systems, Vol. 11, No. 2, May 1996, pp. 767-773
+
+\bibitem{USeventPhasor}\emph{J. H. Chow et al., "Preliminary synchronized phasor data analysis of disturbance events in the US Eastern Interconnection," Power Systems Conference and Exposition, 2009. PSCE '09. IEEE/PES, Seattle, WA, 2009, pp. 1-8.}
+
+\bibitem{Yuwa}  L.~Vanfretti, Y.~Chompoobutrgool, and J.H.~Chow, \emph{Chapter 10: Inter-Area Mode Analysis for Large Power Systems using Synchrophasor Data}, Book Chapter, in Coherency and Model Reduction of Large Power Systems, Joe H. Chow (Ed.), Springer, 2013.
+
+\bibitem{WAPODChina} Li Peng and Wu Xiaochen and Lu Chao and Shi Jinghai and Hu Jiong and He Jingbo and Zhao Yong and Aidong Xu \emph{Implementation of CSG's Wide-Area Damping Control System: Overview and experience} in Power Systems Conference and Exposition, 2009. PSCE '09. IEEE/PES pp. 1-9
+
+
+\bibitem{CommDelay} C.F.M.~Danielson and L.~Vanfretti and , M.S.~Almas and , Y. ~Choompoobutrgool and , J.O.~Gjerde \emph{Analysis of communication network challenges for synchrophasor-based wide-area applications} Bulk Power System Dynamics and Control - IX Optimization, Security and Control of the Emerging Power Grid (IREP), 2013 IREP Symposium
+
+
 \bibitem{PhasorPOD} 
 L.~\"{A}ngquist and C.~Gama  \emph{Damping Algorithm based on Phasor Estimation} in Power Engineering Society Winter Meeting, 2001. IEEE, Volume 3, pp. 1160 - 1165  
 
-\bibitem{KundurTwoArea} 
-M.~Klein, J. G.~Rogers and P.~Kundur \emph{A fundamental study of inter-area oscillations in Power Systems} IEEE Trans, PWRS, no. 6, pp. 914-921, 1991. 
+
 
 \bibitem{eMEGASIM} \emph{eMEGASIM Power Grid Real-Time Digital Hardware in the Loop Simulator} Available Online at : \url{http://www.opal-rt.com/}
 
 %\bibitem{Dmello} F. P.~Dmello, and. \ C.~Concordia
 %\emph{Concepts of Synchronous Machine Stability as Affected by Excitation Control} IEEE TRANSACTIONS ON POWER APPARATUS AND SYSTEMS, vol. PAS 88, no. 4, 1969. 
   
-\bibitem{localREMcomparison}  M. E.~Aboul-Ela, A. A.~Sallam, J. D.~McCalley and A. A.~Fouad, \emph{Damping Controller Design for Power System Oscillations Using Global Signals}, IEEE trans. on Power Systems, Vol. 11, No. 2, May 1996, pp. 767-773
 
 \bibitem{WAMTCSC} J.C~Agee , S~Patterson et al \emph{IEEE tutorial course in Power System stabilization via excitation control.} Technical report, June 2007
 
-\bibitem{CommDelay} C.F.M.~Danielson and L.~Vanfretti and , M.S.~Almas and , Y. ~Choompoobutrgool and , J.O.~Gjerde \emph{Analysis of communication network challenges for synchrophasor-based wide-area applications} Bulk Power System Dynamics and Control - IX Optimization, Security and Control of the Emerging Power Grid (IREP), 2013 IREP Symposium
 
-\bibitem{WAPODNorway} Uhlen, K. and Vanfretti, L. and De Oliveira, M. M. and Leirbukt, AB. and Aarstrand, V. H. and Gjerde, J. O. \emph{Wide-Area Power Oscillation Damper implementation and testing in the Norwegian transmission network} in Power and Energy Society General Meeting, 2012 IEEE pp. 1-7
 
-\bibitem{WAPODChina} Li Peng and Wu Xiaochen and Lu Chao and Shi Jinghai and Hu Jiong and He Jingbo and Zhao Yong and Aidong Xu \emph{Implementation of CSG's Wide-Area Damping Control System: Overview and experience} in Power Systems Conference and Exposition, 2009. PSCE '09. IEEE/PES pp. 1-9
   
 \bibitem{PhasorPODImplement} M.~Shoaib Almas and L.~Vanfretti, \emph{Implementation of Conventional PSS and Phasor Based POD for Power Stabilizing Controls for Real-Time Simulation}, IEEE IES IECON14, 29 Oct-1 Nov, 2014, Dallas, USA.
 %\bibitem{OPALemegasim} eMEGAsim PowerGrid Real-Time Digital Hardware in the Loop Simulator — Opal RT, [Online]. Available: \url{http://www.opal-rt.com/}
@@ -1056,7 +1070,6 @@ M.~Klein, J. G.~Rogers and P.~Kundur \emph{A fundamental study of inter-area osc
 
 \bibitem{sVARdamp} E.V~Larsen and E.H~Chow, General Electric Company, NY, \emph{Application of Static VAR Systems for System Dynamic Performance}, 1987 IEEE pp. 43-46
 
-\bibitem{Yuwa}  L.~Vanfretti, Y.~Chompoobutrgool, and J.H.~Chow, \emph{Chapter 10: Inter-Area Mode Analysis for Large Power Systems using Synchrophasor Data}, Book Chapter, in Coherency and Model Reduction of Large Power Systems, Joe H. Chow (Ed.), Springer, 2013.
 
 \bibitem{TaskForce} M.Crow, M. Gibbard, A. Messina, J. Pierre, J. Sanchez-Gasca, D. Trudnowski, D. Vowles \emph{Identification of Electromechanical Modes in Power Systems} IEEE Task Force Report, Special Publication TP462, June2012.
 
@@ -1074,7 +1087,6 @@ M.~Klein, J. G.~Rogers and P.~Kundur \emph{A fundamental study of inter-area osc
 
 \bibitem{LabViewManuals} \emph{LabVIEW Online Help System Available Online at} \url{http://sine.ni.com/psp/app/doc/p/id/psp-357}
 
-\bibitem{USeventPhasor}\emph{J. H. Chow et al., "Preliminary synchronized phasor data analysis of disturbance events in the US Eastern Interconnection," Power Systems Conference and Exposition, 2009. PSCE '09. IEEE/PES, Seattle, WA, 2009, pp. 1-8.}
 
 %\bibitem{LabVIEWCourse} \emph{LabVIEW Course Manuals - Core 1, Real Time, FPGA, August 2012 Editions}, Copyright 2012 National Instruments
 
